--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "dmwyatt",
-    "dependencies": {
-        "react": "0.12.2"
-    }
+  "dependencies": {
+    "react": "^0.12",
+    "moment": "^2.8",
+    "tether": "^0.6",
+    "reactify": "^1.0",
+    "react-onclickoutside": "0.2.1"
+  }
 }
