--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "tether": "^0.6",
     "reactify": "^1.0",
     "react-onclickoutside": "0.2.1"
+  },
+  "browserify": {
+    "transform": [
+      "reactify"
+    ]
   }
 }
