--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dependencies": {
         "react": "^0.12",
         "moment": "^2.8",
-        "reactify": "^1.0"
+        "reactify": "^1.0",
+        "select2": "git://github.com/select2/select2.git"
     },
     "browserify": {
         "transform": [
