--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "react": "^0.12",
         "moment": "^2.8",
         "reactify": "^1.0",
-        "select2": "git://github.com/select2/select2.git"
+        "select2": "git://github.com/AiiR42/select2.git"
     },
     "browserify": {
         "transform": [
