--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "react": "^0.12",
         "moment": "^2.8",
         "reactify": "^1.0",
+        "jquery": "2.1.3",
         "select2": "git://github.com/AiiR42/select2.git"
     },
     "browserify": {
